# kairos

./: .gitignore  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-plugin-evidence.yml  publish.yml
docs/project-management/: BUILD_PROGRESS.md  CHANGELOG.md  NEXT_STEPS.md
examples/: __init__.py  broken_data.py  cli_workflow.py  competitive_analysis.py  dashboard_demo.py  data_pipeline.py  demo_for_gif.py  evidence_engine_demo.py  llm_workflow.py  real_claude.py  real_claude_concurrent.py  real_claude_logged.py  real_openai.py  real_openai_concurrent.py  run_logger_demo.py  scoped_state.py  simple_chain.py
examples/evidence_engine/: __init__.py  answer.py  belief_revision_builder.py  claim_extractor.py  content_gate.py  contracts.py  evidence_evaluator.py  fixtures.py  harness.py  pipeline.py  untrusted_text.py
examples/evidence_engine/fixtures/: breaking_news_mixed_provenance.json  conflicting_sources.json  event_outcome_agreement.json  numeric_value_comparison.json  poisoned_injection.json
kairos/: __init__.py  __main__.py  cli.py  dashboard.py  enums.py  exceptions.py  executor.py  failure.py  logger.py  plan.py  schema.py  security.py  state.py  step.py  validators.py  workflow.py
kairos/adapters/: __init__.py  base.py  claude.py  gemini.py  openai_adapter.py
kairos/dashboard_ui/: app.js  index.html  styles.css
kairos/plugins/: __init__.py  registry.py
plugins/kairos-ai-evidence/: LICENSE  README.md  pyproject.toml
plugins/kairos-ai-evidence/examples/: __init__.py  local_conflict_demo.py  local_mcp_demo.py  local_smoke_test.py  local_verified_demo.py  mcp_direct_checks.py  mcp_server_launcher.py  quickstart.py
plugins/kairos-ai-evidence/kairos_ai_evidence/: __init__.py  belief_revision.py  claim_extractor.py  content_gate.py  contracts.py  evidence_evaluator.py  workflows.py
plugins/kairos-ai-evidence/kairos_ai_evidence/mcp/: __init__.py  limits.py  retriever.py  server.py  tools.py
plugins/kairos-ai-evidence/tests/: conftest.py  test_belief_revision.py  test_claim_extractor.py  test_content_gate.py  test_contracts.py  test_evidence_evaluator.py  test_mcp_limits.py  test_mcp_retriever.py  test_mcp_server.py  test_mcp_tools.py  test_reference_workflow.py
plugins/kairos-plugin-evidence/: README.md  pyproject.toml
plugins/kairos-plugin-evidence/examples/: _fixtures.py  quickstart.py
plugins/kairos-plugin-evidence/kairos_plugin_evidence/: __init__.py  belief_revision.py  claim_extractor.py  content_gate.py  contracts.py  evidence_evaluator.py  workflows.py
plugins/kairos-plugin-evidence/tests/: conftest.py  test_belief_revision.py  test_claim_extractor.py  test_content_gate.py  test_contracts.py  test_evidence_evaluator.py  test_reference_workflow.py
tests/: conftest.py  test_cli.py  test_dashboard.py  test_enums.py  test_exceptions.py  test_executor.py  test_executor_validation.py  test_failure.py  test_logger.py  test_plan.py  test_plugins.py  test_schema.py  test_security.py  test_state.py  test_step.py  test_validators.py  test_workflow.py
tests/evidence_spike/: __init__.py  conftest.py  test_belief_revision_builder.py  test_claim_extractor.py  test_content_gate.py  test_contracts.py  test_evidence_evaluator.py  test_harness.py  test_pipeline_security.py  test_untrusted_text.py
tests/test_adapters/: test_base.py  test_claude.py  test_gemini.py  test_openai.py
