[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kairos-ai"
version = "0.4.3"
description = "Security-hardened, model-agnostic Python SDK for contract-enforced AI agent workflows"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Vanxa", email = "info@vanxa.com" },
]
keywords = [
    "ai",
    "ai-agents",
    "agents",
    "contract",
    "llm",
    "model-agnostic",
    "orchestration",
    "pipeline",
    "prompt-injection",
    "retry",
    "security",
    "validation",
    "workflow",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Pydantic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Natural Language :: English",
]

# Core SDK: zero external dependencies
dependencies = []

[project.optional-dependencies]
pydantic = ["pydantic>=2.0"]
cli = ["typer>=0.9"]
anthropic = ["anthropic>=0.20"]
openai = ["openai>=1.0"]
gemini = ["google-genai>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.5",
    "pyright>=1.1",
]
all = ["kairos-ai[pydantic,cli,anthropic,openai,gemini]"]

[project.scripts]
kairos = "kairos.cli:main"

[project.urls]
Homepage = "https://github.com/govanxa/kairos"
Documentation = "https://github.com/govanxa/kairos/blob/main/GETTING_STARTED.md"
Repository = "https://github.com/govanxa/kairos"
Issues = "https://github.com/govanxa/kairos/issues"

[tool.hatch.build.targets.wheel]
packages = ["kairos"]

# --- Tool Configuration ---

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "UP",   # pyupgrade (modern syntax)
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print (no print statements)
]
ignore = [
    "S101",  # allow assert in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "T20", "S310", "SIM108"]  # allow assert, hardcoded passwords, print, URL open, ternary
"examples/**/*.py" = ["T20", "S101"]  # allow print and assert in examples
"kairos/cli.py" = ["T20", "A002", "E402"]  # allow print, built-in shadowing, import order (try/except guard)
"kairos/dashboard.py" = ["T20", "N802", "A002", "E501"]  # allow print, HTTP method names, param shadowing, long HTML lines

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

# pydantic is optional — type: ignore[import-not-found] is needed when it's
# absent but flagged as unused when it's installed. Suppress that per-module.
[[tool.mypy.overrides]]
module = "kairos.schema"
warn_unused_ignores = false

# typer is optional — may not be installed in CI or minimal environments.
# The CLI module imports typer unconditionally (for Pylance compatibility)
# but mypy may not find it. Suppress import and untyped-decorator errors.
[[tool.mypy.overrides]]
module = "kairos.cli"
ignore_missing_imports = true
disallow_untyped_decorators = false
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"

[tool.coverage.run]
source = ["kairos"]
omit = ["kairos/cli.py", "kairos/plugins/*", "kairos/interop/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
