[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kairos-plugin-evidence"
version = "0.1.0"
description = "Evidence Engine plugin for the Kairos SDK — contract-validated evidence evaluation"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Vanxa", email = "info@vanxa.com" },
]
dependencies = ["kairos-ai>=0.5,<0.6"]

[project.entry-points."kairos.plugins"]
evidence = "kairos_plugin_evidence:MANIFEST"

[tool.hatch.build.targets.wheel]
packages = ["kairos_plugin_evidence"]

# --- Tool Configuration ---

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "UP",   # pyupgrade (modern syntax)
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print (no print statements)
]
ignore = [
    "S101",  # allow assert in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "T20", "S310", "SIM108"]
"examples/**/*.py" = ["T20", "S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = ["."]

[tool.coverage.run]
source = ["kairos_plugin_evidence"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
